@@ -1,6 +1,6 @@
 % File src/library/utils/man/capture.output.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2014 R Core Team
+% Copyright 1995-2015 R Core Team
 % Distributed under GPL 2 or later
 
 \name{capture.output}
@@ -12,7 +12,8 @@
   way that \code{\link{with}} is related to \code{\link{attach}}.
 }
 \usage{
-capture.output(\dots, file = NULL, append = FALSE)
+capture.output(\dots, file = NULL, append = FALSE,
+               type = c("output", "message"), split = FALSE)
 }
 \arguments{
   \item{\dots}{Expressions to be evaluated.}
@@ -21,11 +22,16 @@ capture.output(\dots, file = NULL, append = FALSE)
     it will be opened initially and closed on exit.}
   \item{append}{logical.  If \code{file} a file name or unopened
     connection, append or overwrite?}
+  \item{type, split}{are passed to \code{\link{sink}(), see there.}
 }
 \details{
   An attempt is made to write output as far as possible to \code{file}
   if there is an error in evaluating the expressions, but for
   \code{file = NULL} all output will be lost.
+
+  Messages sent to \code{\link{stderr}()} (including those from
+  \code{\link{message}}, \code{\link{warning}} and \code{\link{stop}})
+  are captured by \code{type = "message"}.
 }
 \value{
   A character string (if \code{file = NULL}), or invisible \code{NULL}.
